--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "cron": "^2.1.0",
     "express": "^4.18.2",
+    "jsdom": "^20.0.2",
+    "node-fetch": "^3.2.10",
     "socket.io": "^4.5.3",
     "ws": "^8.10.0"
   }
